    https://github.com/JPNaude/Qtilities/issues/milestones

    General:
    ============================
    [#] Ported to work with Qt 5 (including plugins etc.). Note that the Qt Property Browser solution does
        not build against Qt 5 yet, thus building against Qt 5 only works when QTILITIES_PROPERTY_BROWSER is not defined at present.
    [#] Now compiles and runs with the MSVC compiler.
    [#] Improved = operator overloading everywhere. Now check that you don't assign an object to itself.
    [#] Cleaned up and improved Qtilities.pri. Thanks to Carel Combrink for the contribution.
    [#] Its no longer needed to set the release/debug configuration mode through CONFIG in Qtilities.pri.

    ============================
    QtilitiesLogging:
    ============================
    [#] AbstractLoggerEngine's logMessage() function got a new message type parameter.
    [#] AbstractFormattingEngine is not exported, thus you can subclass it to create your own formatting engines in your own libraries.
    [#] WidgetLoggerEngine::isFormattingEngineConstant() no longer returns true, thus you can formatting messages using your own formatting engines.
    [#] Made messages at the start of logs appear in debug mode only debug. For example: "ENGINE_NAME initialized successfully. Log messages will be formatted using the following formatting engine: XXX".

    [*] Fixed handling of < and > characters in some engines where these characters has some meaning (XML for example).
    [*] Fixed bug in Logger::loggerEngineReferenceAt() where it did not ignore deleted logger engines during its position calculation.
    [*] Fixed bug where Qtilities::Logging::Logger::newLoggerEngine() could return false instead of 0 in some cases.
    [*] Fixed possibility of going into an infinite loop when the QtMessage engine and logging of Qt debug messages is enabled.

    ============================
    QtilitiesCore:
    ============================
    [+] Added Factory::categoryForTag().