@@ -70,6 +70,12 @@ For comment, queries or bug reports please get in touch.
 - Qtilities::CoreGui::CodeEditorWidget::fileModifiedOutsideHandlingPolicy()
 - Qtilities::CoreGui::CodeEditorWidget::setFileModifiedOutsideHandlingPolicy()
 
+- Qtilities::CoreGui::DynamicSideWidgetViewer::sideViewerWidgetInterfaces()
+- Qtilities::CoreGui::DynamicSideWidgetViewer::sideViewerWidgets()
+
+- Qtilities::CoreGui::DynamicSideWidgetWrapper::currentWidget()
+- Qtilities::CoreGui::DynamicSideWidgetWrapper::comboBoxStyle().
+
 - Qtilities::CoreGui::Interfaces::IConfigPage::configPageInitialize()
 
 - Qtilities::CoreGui::NamingPolicyFilter::subjectNameChanged()
@@ -79,6 +85,7 @@ For comment, queries or bug reports please get in touch.
 - Qtilities::CoreGui::ObjectDynamicPropertyBrowser::toggleToolBar()
 - Qtilities::CoreGui::ObjectDynamicPropertyBrowser::isToolBarVisible()
 - Qtilities::CoreGui::ObjectDynamicPropertyBrowser::abstractPropertyBrowser()
+
 
 - Qtilities::CoreGui::ObjectPropertyBrowser::abstractPropertyBrowser()
 
@@ -95,6 +102,8 @@ For comment, queries or bug reports please get in touch.
 - Qtilities::CoreGui::ObserverWidget::setSearchBoxCheckedItemFilters()
 - Qtilities::CoreGui::ObserverWidget::searchBoxCheckedItemFilters()
 
+- Qtilities::CoreGui::SideWidgetFileSystem::selectPath()
+
 - Qtilities::CoreGui::TaskManagerGui::getWidgetLoggerEngineDisplaysFlag()
 - Qtilities::CoreGui::TaskManagerGui::setWidgetLoggerEngineDisplaysFlag()
 
@@ -102,5 +111,9 @@ For comment, queries or bug reports please get in touch.
 
 - Qtilities::ProjectManagement::ProjectManager::setUseProjectFileLocks()
 - Qtilities::ProjectManagement::ProjectManager::useProjectFileLocks()
+- Qtilities::ProjectManagement::ProjectManager::setProjectMenuItemsTargetMenu()
+- Qtilities::ProjectManagement::ProjectManager::projectMenuItemsTargetMenu()
+- Qtilities::ProjectManagement::ProjectManager::setProjectMenuItemsBeforeCommand()
+- Qtilities::ProjectManagement::ProjectManager::projectMenuItemsBeforeCommand()
 
 */
